objects/DRG_Code__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS_DRG__c</fullName>
        <label>DRG-Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Service Line</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Other</fullName>
                </value>
                <value>
                    <fullName>Behavioral</fullName>
                </value>
                <value>
                    <fullName>Burn</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Digestive Disease</fullName>
                </value>
                <value>
                    <fullName>Endocrine</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                </value>
                <value>
                    <fullName>Hematology</fullName>
                </value>
                <value>
                    <fullName>Infectious Disease</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Musculoskeletal</fullName>
                </value>
                <value>
                    <fullName>Nephrology/Urology</fullName>
                </value>
                <value>
                    <fullName>Neuroscience</fullName>
                </value>
                <value>
                    <fullName>Newborn</fullName>
                </value>
                <value>
                    <fullName>OB/GYN</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Poisoning/Drug Tox</fullName>
                </value>
                <value>
                    <fullName>Rehabilation</fullName>
                </value>
                <value>
                    <fullName>Respiratory</fullName>
                </value>
                <value>
                    <fullName>Skin and Breast</fullName>
                </value>
                <value>
                    <fullName>Spine</fullName>
                </value>
                <value>
                    <fullName>Transplant</fullName>
                </value>
                <value>
                    <fullName>Trauma</fullName>
                </value>
                <value>
                    <fullName>Cardiac Services</fullName>
                    <isActive>false</isActive>
                    <label>Cardiac Services</label>
                </value>
                <value>
                    <fullName>General Medicines</fullName>
                    <isActive>false</isActive>
                    <label>General Medicines</label>
                </value>
                <value>
                    <fullName>General Surgery</fullName>
                    <isActive>false</isActive>
                    <label>General Surgery</label>
                </value>
                <value>
                    <fullName>Gynecology</fullName>
                    <isActive>false</isActive>
                    <label>Gynecology</label>
                </value>
                <value>
                    <fullName>Neonatology</fullName>
                    <isActive>false</isActive>
                    <label>Neonatology</label>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                    <isActive>false</isActive>
                    <label>Neurology</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Service_Line__c</fullName>
        <label>Sub Service Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Line__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Nephrology</fullName>
                </value>
                <value>
                    <fullName>Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Pulmonology</fullName>
                </value>
                <value>
                    <fullName>Substance Abuse</fullName>
                </value>
                <value>
                    <fullName>Transplant</fullName>
                </value>
                <value>
                    <fullName>Trauma</fullName>
                </value>
                <value>
                    <fullName>Gynecology</fullName>
                </value>
                <value>
                    <fullName>Neonate</fullName>
                </value>
                <value>
                    <fullName>Normal Newborn</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Neurosurgery</fullName>
                </value>
                <value>
                    <fullName>Hematology</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Burn</fullName>
                </value>
                <value>
                    <fullName>Rehabilitation</fullName>
                </value>
                <value>
                    <fullName>Thoracic Surgery</fullName>
                </value>
                <value>
                    <fullName>Cancer - Surgical</fullName>
                </value>
                <value>
                    <fullName>ENT - Surgical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>BMT</fullName>
                </value>
                <value>
                    <fullName>Cancer - Medical</fullName>
                </value>
                <value>
                    <fullName>ENT - Medical</fullName>
                </value>
                <value>
                    <fullName>Cath/EP</fullName>
                </value>
                <value>
                    <fullName>Vascular - Surgical</fullName>
                </value>
                <value>
                    <fullName>Spine - Surgical</fullName>
                </value>
                <value>
                    <fullName>Cardiology - Medical</fullName>
                </value>
                <value>
                    <fullName>Vascular - Medical</fullName>
                </value>
                <value>
                    <fullName>Trach</fullName>
                </value>
                <value>
                    <fullName>Digestive Disease - Surgical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DRG Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MS_DRG__c</columns>
        <columns>Description__c</columns>
        <columns>Service_Line__c</columns>
        <columns>Sub_Service_Line__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DRG-{0000}</displayFormat>
        <label>DRG Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRG Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>